--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@trpc/next": "^10.0.0",
     "@trpc/react-query": "^10.0.0",
     "@trpc/server": "^10.0.0",
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.0",
+    "iron-session": "^6.3.1",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
