--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/server": "^10.7.0",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
+    "class-variance-authority": "^0.4.0",
     "iron-session": "^6.3.1",
     "next": "13.1.1",
     "react": "18.2.0",
