--- a/package.json
+++ b/package.json
@@ -10,7 +10,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
     "@prisma/client": "^4.5.0",
+    "@react-email/button": "^0.0.5",
+    "@react-email/container": "^0.0.5",
+    "@react-email/head": "^0.0.3",
+    "@react-email/hr": "^0.0.3",
+    "@react-email/html": "^0.0.3",
+    "@react-email/img": "^0.0.3",
+    "@react-email/link": "^0.0.3",
+    "@react-email/preview": "^0.0.3",
+    "@react-email/render": "^0.0.3",
+    "@react-email/section": "^0.0.4",
+    "@react-email/text": "^0.0.3",
     "@tanstack/react-query": "^4.16.0",
     "@trpc/client": "^10.7.0",
     "@trpc/next": "^10.7.0",
@@ -21,6 +33,7 @@
     "class-variance-authority": "^0.4.0",
     "iron-session": "^6.3.1",
     "next": "13.1.1",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.12.1",
@@ -29,6 +42,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "^18.11.18",
+    "@types/nodemailer": "^6.4.7",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
