--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,12 @@
 
 # Prisma
 DATABASE_URL=file:./db.sqlite
+
+MAIL_MAILER=smtp
+MAIL_HOST=mailhog
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_NAME="T3 - Breeze"
